--- a/src/vmm/Cargo.toml
+++ b/src/vmm/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
 edition = "2018"
 
 [dependencies]
+linux-loader = { git = "https://github.com/AlexandruCihodaru/linux-loader", branch = "debug_trait"}
 lazy_static = ">=1.4.0"
 libc = ">=0.2.39"
 serde = { version = ">=1.0.27", features = ["derive"] }
@@ -14,7 +15,6 @@ versionize_derive = ">=0.1.3"
 vm-memory = { path = "../vm-memory" }
 arch = { path = "../arch" }
 devices = { path = "../devices" }
-kernel = { path = "../kernel" }
 kvm-bindings = { version = "0.3.0", features = ["fam-wrappers"] }
 kvm-ioctls = { version = "0.6.0" }
 logger = { path = "../logger" }
