--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["The Chromium OS Authors"]
 edition = "2018"
 
 [dependencies]
+linux-loader = { git = "https://github.com/AlexandruCihodaru/linux-loader", branch = "debug_trait"}
 kvm-bindings = { version = "0.3.0", features = ["fam-wrappers"] }
 kvm-ioctls = { version = "0.6.0" }
 libc = ">=0.2.39"
