--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["The Chromium OS Authors"]
 edition = "2018"
 
 [dependencies]
+linux-loader = ">= 0.3.0"
 kvm-bindings = { version = ">=0.4.0", features = ["fam-wrappers"] }
 kvm-ioctls = ">=0.8.0"
 libc = ">=0.2.39"
