--- a/src/kernel/Cargo.toml
+++ b/src/kernel/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-vm-memory = { path = "../vm-memory" }
+vm-memory = {git = "https://github.com/rust-vmm/vm-memory", branch = "master", features = ["backend-mmap"]}
 utils = { path = "../utils" }
