--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 kvm-bindings = { version = ">=0.4.0", features = ["fam-wrappers"] }
 kvm-ioctls = ">=0.8.0"
 libc = ">=0.2.39"
-vm-memory = { path = "../vm-memory" }
+vm-memory = {git = "https://github.com/rust-vmm/vm-memory", branch = "master", features = ["backend-mmap"]}
 versionize = ">=0.1.6"
 versionize_derive = ">=0.1.3"
 
