--- a/src/devices/Cargo.toml
+++ b/src/devices/Cargo.toml
@@ -11,7 +11,8 @@ timerfd = ">=1.0"
 versionize = ">=0.1.6"
 versionize_derive = ">=0.1.3"
 vm-memory = { path = "../vm-memory" }
-vm-superio = ">=0.2.0"
+vm-superio = { git = "https://github.com/AlexandruCihodaru/vm-superio.git", branch = "kick_serial_poc" }
+vmm-sys-util = ">=0.8.0"
 
 dumbo = { path = "../dumbo" }
 logger = { path = "../logger" }
