--- a/src/logger/Cargo.toml
+++ b/src/logger/Cargo.toml
@@ -10,7 +10,8 @@ libc = ">=0.2.39"
 log = { version = ">=0.4", features = ["std"] }
 serde = { version = ">=1.0.27", features = ["derive", "rc"] }
 serde_json = ">=1.0.9"
-vm-superio = ">=0.2.0"
+vm-superio = { git = "https://github.com/AlexandruCihodaru/vm-superio.git", branch = "kick_serial_poc" }
+
 
 utils = { path = "../utils" }
 
